Fix more overflow, alignment, and positioning issues

--- a/public/style.css
+++ b/public/style.css
@@ -91,6 +91,8 @@ body { height: 100%; overflow-x: hidden; }
   height: 100%;
   display: -webkit-flex;
   display: flex;
+  -webkit-justify-content: center;
+  justify-content: center;
   -webkit-align-items: center;
   align-items: center;
 }
